# Psihointegritet

./: .gitattributes  .gitignore  README.md  compose.yaml
.claude/: settings.json
.design-sync/: NOTES.md  config.json  conventions.md  prep-scoped-pkg.mjs
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.json
backend/scripts/: export_openapi.py  purge_expired_intake.py
backend/src/psihointegritet/: __init__.py  main.py
backend/src/psihointegritet/api/: dependencies.py  errors.py
backend/src/psihointegritet/api/v1/: health.py  router.py
backend/src/psihointegritet/core/: config.py  logging.py  observability.py
backend/src/psihointegritet/db/: base.py  session.py
backend/src/psihointegritet/db/migrations/: env.py
backend/src/psihointegritet/db/migrations/versions/: 20260722_0001_intake_matching_foundation.py  20260722_0002_anja_intake_refinement.py  20260722_0003_marjan_parenting_capability.py
backend/src/psihointegritet/infrastructure/auth/: identity.py
backend/src/psihointegritet/infrastructure/auth/clerk/: __init__.py  verifier.py
backend/src/psihointegritet/modules/guidance/: authorization.py  matching.py  models.py  retention.py  router.py  safety.py  schemas.py  service.py  state_machine.py
backend/src/psihointegritet/modules/identity/: models.py
backend/src/psihointegritet/modules/organizations/: models.py
backend/tests/contract/: test_health_api.py  test_intake_capabilities_api.py
backend/tests/unit/: test_config.py  test_guidance_matching.py  test_guidance_safety.py  test_guidance_schemas.py  test_guidance_state_machine.py
documentations/: ARCHITECTURAL_RULES_REVISED.md  CHATGPT_WORK_MODE_REPORT_2026-07-21.md  CHATGPT_WORK_MODE_REPORT_DESCRIPTION.md  CHATGPT_WORK_MODE_WEB_FLOW_IMPLEMENTATION_2026-07-21.md  CLAUDE_CODE_MASTER_PLAN_v1_0.md  CLAUDE_FOUNDATION_PROMPT.md  CONTENT_GOVERNANCE_CONTRACT_v0.1.md  CONTENT_HEALTH_RULES_v0.1.md  CONTENT_MODEL_MATRIX_v0.1.md  CONTENT_PUBLISH_GATES_v0.1.md  (+23 more)
(+325 files in other folders)
